# internal/models/impps.go
@@ -1,19 +1,17 @@
 package models
 
-// URL represents a website or online profile
-type URL struct {
+// IMPP represents a Instant Messaging profile/protocol
+type IMPP struct {
 	ID        int    `json:"id"`
 	ContactID int    `json:"contact_id"`
-	URL       string `json:"url"`
+	IMPP      string `json:"impp"`
 	Type      int    `json:"label_type_id"`
 	TypeLabel string `json:"type_label"`
-	IsPrimary bool   `json:"is_primary"`
 }
 
-type URLJSONPatch struct {
+type IMPPJSONPatch struct {
 	ID        int     `json:"id" example:"1"`
 	ContactID *int    `json:"contact_id" example:"4"`
-	URL       *string `json:"url" example:"https://facebook.com/kindredcard"`
+	IMPP      *string `json:"impp" example:"matrix:u/john:example.org"`
 	Type      *int    `json:"label_type_id" example:"42"`
-	IsPrimary *bool   `json:"is_primary" example:"false"`
 }
